<?xml version="1.0"?>
<package format="2">
  <name>test_demo_cpp</name>
  <version>0.0.1</version>
  <description>The test_demo_cpp package</description>
  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
